--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -23,6 +23,8 @@ body {
     background-color: #f5f8fa;
 }
 
+
+
 @import "_navbar";
 @import "_post";
 @import "_icons";
@@ -35,3 +37,4 @@ body {
 @import "_trends";
 @import "_notification";
 @import "_profile-full";
+@import "debuginfo";
