--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -216,7 +216,12 @@
 {% block content %} {% endblock %}
 
 <!-- /.container -->
-
+<div class="debuginfo">
+    <span class="icon">π</span>
+    <span class="content">
+        {{ debug_info }}
+    </span>
+</div>
 </body>
 
 </html>
