--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -23,7 +23,20 @@ body {
     background-color: #f5f8fa;
 }
 
-
+.button {
+    border-radius: 5px;
+    background-color: $col-pri;
+    border-style: none;
+    padding: 5px 10px 5px 10px;
+    color: $col-background;
+    text-decoration: none !important;
+    &:hover {
+        background-color: darken($col-pri, 10%);
+    }
+    &:active {
+        background-color: darken($col-pri, 15%);
+    }
+}
 
 @import "_navbar";
 @import "_post";
@@ -37,4 +50,7 @@ body {
 @import "_trends";
 @import "_notification";
 @import "_profile-full";
-@import "debuginfo";
+@import "_debuginfo";
+@import "_landing";
+@import "_login";
+@import "_signup";
