Moes users app to main project

--- a/static/templates/card-site-info.html
+++ b/static/templates/card-site-info.html
@@ -1,4 +1,4 @@
-{% load user_tags %}
+{% load tags %}
 
 <div class="b-site-info">
     <span>© 2016 Timothy Ings</span><span class="separator"></span>
