--- a/static/templates/profile-posts.html
+++ b/static/templates/profile-posts.html
@@ -1,5 +1,5 @@
 {% extends 'profile-base.html' %}
-{% load user_tags %}
+{% load tags %}
 
 {% block profile_header %}
     <title>{{ target_user.display_name }} (@{{ target_user.user.username }}) | Gab</title>
