--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load user_tags %}
+{% load tags %}
 {% block header %}
     <title>Log in | Gab</title>
 {% endblock %}
