--- a/static/templates/signup.html
+++ b/static/templates/signup.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load user_tags %}
+{% load tags %}
 {% block header %}
     <title>Sign up | Gabr</title>
 {% endblock %}
