--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load tags %}
 {% block header %}
-    <title>Log in | Gab</title>
+    <title>Log in | Gabr</title>
 {% endblock %}
 {% block content %}
     <div class="b-login-container">
