--- a/static/templates/notifications.html
+++ b/static/templates/notifications.html
@@ -2,7 +2,7 @@
 {% load tags %}
 
 {% block header %}
-    <title>Notifications | Gab</title>
+    <title>Notifications | Gabr</title>
 {% endblock %}
 
 {% block content %}
