--- a/static/templates/post.html
+++ b/static/templates/post.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-    <title>Post | Gab</title>
+    <title>Post | Gabr</title>
 {% endblock %}
 
 {% block content %}
