--- a/static/templates/profile-following.html
+++ b/static/templates/profile-following.html
@@ -3,7 +3,7 @@
 
 {% block profile_header %}
 
-    <title>{{ target_user.display_name }} (@{{ target_user.user.username }}) | Gab</title>
+    <title>{{ target_user.display_name }} (@{{ target_user.user.username }}) | Gabr</title>
 
 {% endblock %}
 
