--- a/static/templates/profile-posts.html
+++ b/static/templates/profile-posts.html
@@ -2,7 +2,7 @@
 {% load tags %}
 
 {% block profile_header %}
-    <title>{{ target_user.display_name }} (@{{ target_user.user.username }}) | Gab</title>
+    <title>{{ target_user.display_name }} (@{{ target_user.user.username }}) | Gabr</title>
     <script>
         loadPosts("profile", 50, "{{ target_user.user.username }}");
     </script>
