--- a/static/templates/feed.html
+++ b/static/templates/feed.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 {% block header %}
-    <title>Feed | Gab</title>
+    <title>Feed | Gabr</title>
     <script>
         loadPosts("feed", 50);
         window.setInterval(function(){
