--- a/static/templates/profile-base.html
+++ b/static/templates/profile-base.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 {% block header %}
-    <title>{{ target_user.display_name }} (@{{ target_user.user.username }}) | Gab</title>
+    <title>{{ target_user.display_name }} (@{{ target_user.user.username }}) | Gabr</title>
     {% block profile_header %} {% endblock %}
 {% endblock %}
 
