--- a/static/scss/_signup.scss
+++ b/static/scss/_signup.scss
@@ -12,4 +12,12 @@
     .login-link {
         font-size: small;
     }
+
+    ul {
+        list-style-type: none;
+        padding: 0px;
+        margin: 0px;
+        margin-left: 115px;
+        text-align: left;
+    }
 }
