--- a/static/templates/landing.html
+++ b/static/templates/landing.html
@@ -4,7 +4,9 @@
 {% endblock %}
 {% block content %}
     <div class="b-landing-container">
-        <h1>Gabr</h1>
+        <a href="/" style="text-decoration: none !important;">
+            <h1>Gabr</h1>
+        </a>
         <h2>Microblogging</h2>
         <hr class="divider">
         <a href="{% url "login" %}" class="button">Log in</a>
