--- a/static/scss/_login.scss
+++ b/static/scss/_login.scss
@@ -9,18 +9,7 @@
         width: 300px;
     }
 
-    .button {
-        border-radius: 5px;
-        background-color: $col-pri;
-        border-style: none;
-        padding: 10px 10px 10px 10px;
-        color: $col-background;
-        text-decoration: none !important;
-        &:hover {
-            background-color: darken($col-pri, 10%);
-        }
-        &:active {
-            background-color: darken($col-pri, 15%);
-        }
+    .signup-link {
+        font-size: small;
     }
 }
