--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -27,16 +27,16 @@
 
 <!--<body background="{% static "img/backgrounds/diagmonds.png" %}">-->
 
-{% if user.is_authenticated %}
-    <!-- Navigation -->
-    <nav class="b-navbar">
-        <!-- Left nav -->
-        <div class="item left">
-            <a class="link" href="/">
-                <span class="icon icon-home"></span>
-                Feed
-            </a>
-        </div>
+<!-- Navigation -->
+<nav class="b-navbar">
+    <!-- Left nav -->
+    <div class="item left">
+        <a class="link" href="/">
+            <span class="icon icon-home"></span>
+            Home
+        </a>
+    </div>
+    {% if user.is_authenticated %}
         <div class="item left">
             <a class="link" href="{% url "messages" %}">
                 <span class="icon icon-message"></span>
@@ -99,13 +99,30 @@
                 </div>
             </div>
         </div>
-
-        <!-- Search box -->
+    {% endif %}
+    {% if not user.is_authenticated %}
         <div class="item right">
-            <input class="text-input" type="text" placeholder="Search">
+            <form action="{% url "login" %}" style="display: inline">
+                <button class="button" type="submit">
+                    <span class="icon icon-post"></span>
+                    Log in
+                </button>
+            </form>
+            <form action="{% url "signup" %}" style="display: inline">
+                <button class="button" type="submit">
+                    <span class="icon icon-post"></span>
+                    Sign up
+                </button>
+            </form>
         </div>
-    </nav>
+    {% endif %}
+    <!-- Search box -->
+    <div class="item right">
+        <input class="text-input" type="text" placeholder="Search">
+    </div>
+</nav>
 
+{% if user.is_authenticated %}
     <!-- Universal new post modal -->
     <div class="modal fade" id="new-post-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3" aria-hidden="true">
         <div class="modal-dialog " role="document">
@@ -130,83 +147,83 @@
             </div>
         </div>
     </div>
-
-    <!-- Universal view post modal -->
-    <div class="modal fade" id="modal-viewpost" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3" aria-hidden="true">
-        <input type="hidden" id="modal-viewpost-username">
-        <div class="modal-dialog " role="document">
-            <input id="modal-viewpost-postid" type="hidden" />
-            <div class="b-post rounded-top">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <a id="modal-viewpost-postuser-link" href="#">
-                    <div class="avatar">
-                        <img id="modal-viewpost-postuser-avatar" class="image" src="" />
-                    </div>
-                    <span id="modal-viewpost-postuser-displayname" class="display-name"></span>
-                </a>
-                <span id="modal-viewpost-postuser-username" class="user-name" ></span>
-                <span id="modal-viewpost-post-time" class="time"></span>
-                <script>
-                    $("#modal-viewpost-postuser-link").mouseenter(function () {
-                        var left = $(this).position().left;
-                        var top = $(this).position().top;
-                        viewProfileCard($("#modal-viewpost-username").val(), top, left);
-                    });
-                    $("#modal-viewpost-postuser-link").mouseout(function() {
-                        hideProfileCard();
-                    });
-                </script>
-                <p id="modal-viewpost-post-body" class="post-text"></p>
-                <button onclick="onLikeButton(-1)" class="button" id="like-button" name="like-button" type="button">
-                    <span id="modal-viewpost-like" class="icon like-button-false"></span>
-                </button>
-                <button onclick="onRepostButton(-1)" class="button" id="repost-button" name="repost-button" type="button">
-                    <span id="modal-viewpost-repost" class="icon repost-button-false"></span>
-                </button>
-            </div>
-        </div>
-    </div>
-
-    <div class="b-profile-small" id="global-profile-card">
-        <div class="banner">
-            <img class="image" id="profile-card-banner" src="" />
-        </div>
-        <div>
-            <a id="profile-card-profile-link" href="#">
-                <div class="avatar">
-                    <img class="image" id="profile-card-avatar" src="" />
-                </div>
-                <span class="display-name" id="profile-card-display-name"></span><br>
-                <span class="user-name" id="profile-card-user-name"></span>
-            </a>
-
-            <div class="bio" id="profile-card-bio"></div>
-
-            <div class="stats">
-                <a id="profile-card-profile-link-posts" href="#">
-                    <div class="label">
-                        posts<br>
-                        <span class="value" id="profile-card-profile-post-count"></span>
-                    </div>
-                </a>
-                <a id="profile-card-profile-link-following" href="#">
-                    <div class="label">
-                        following<br>
-                        <span class="value" id="profile-card-profile-following-count"></span>
-                    </div>
-                </a>
-                <a id="profile-card-profile-link-followers" href="#">
-                    <div class="label">
-                        followers<br>
-                        <span class="value" id="profile-card-profile-follower-count"></span>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
 {% endif %}
+
+<!-- Universal view post modal -->
+<div class="modal fade" id="modal-viewpost" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3" aria-hidden="true">
+    <input type="hidden" id="modal-viewpost-username">
+    <div class="modal-dialog " role="document">
+        <input id="modal-viewpost-postid" type="hidden" />
+        <div class="b-post rounded-top">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <a id="modal-viewpost-postuser-link" href="#">
+                <div class="avatar">
+                    <img id="modal-viewpost-postuser-avatar" class="image" src="" />
+                </div>
+                <span id="modal-viewpost-postuser-displayname" class="display-name"></span>
+            </a>
+            <span id="modal-viewpost-postuser-username" class="user-name" ></span>
+            <span id="modal-viewpost-post-time" class="time"></span>
+            <script>
+                $("#modal-viewpost-postuser-link").mouseenter(function () {
+                    var left = $(this).position().left;
+                    var top = $(this).position().top;
+                    viewProfileCard($("#modal-viewpost-username").val(), top, left);
+                });
+                $("#modal-viewpost-postuser-link").mouseout(function() {
+                    hideProfileCard();
+                });
+            </script>
+            <p id="modal-viewpost-post-body" class="post-text"></p>
+            <button onclick="onLikeButton(-1)" class="button" id="like-button" name="like-button" type="button">
+                <span id="modal-viewpost-like" class="icon like-button-false"></span>
+            </button>
+            <button onclick="onRepostButton(-1)" class="button" id="repost-button" name="repost-button" type="button">
+                <span id="modal-viewpost-repost" class="icon repost-button-false"></span>
+            </button>
+        </div>
+    </div>
+</div>
+
+<div class="b-profile-small" id="global-profile-card">
+    <div class="banner">
+        <img class="image" id="profile-card-banner" src="" />
+    </div>
+    <div>
+        <a id="profile-card-profile-link" href="#">
+            <div class="avatar">
+                <img class="image" id="profile-card-avatar" src="" />
+            </div>
+            <span class="display-name" id="profile-card-display-name"></span><br>
+            <span class="user-name" id="profile-card-user-name"></span>
+        </a>
+
+        <div class="bio" id="profile-card-bio"></div>
+
+        <div class="stats">
+            <a id="profile-card-profile-link-posts" href="#">
+                <div class="label">
+                    posts<br>
+                    <span class="value" id="profile-card-profile-post-count"></span>
+                </div>
+            </a>
+            <a id="profile-card-profile-link-following" href="#">
+                <div class="label">
+                    following<br>
+                    <span class="value" id="profile-card-profile-following-count"></span>
+                </div>
+            </a>
+            <a id="profile-card-profile-link-followers" href="#">
+                <div class="label">
+                    followers<br>
+                    <span class="value" id="profile-card-profile-follower-count"></span>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
 
 {% block content %} {% endblock %}
 
