--- a/static/templates/settings-password.html
+++ b/static/templates/settings-password.html
@@ -2,10 +2,10 @@
 {% load tags %}
 {% block settings-content %}
     <div class="header">
-        <h1>Account</h1>
+        <h1>Password</h1>
         <script>
             $(document).ready(function() {
-                $("#s-account").addClass("active");
+                $("#s-password").addClass("active");
             });
         </script>
     </div>
