--- a/static/scss/_login.scss
+++ b/static/scss/_login.scss
@@ -1,3 +1,9 @@
+.b-header {
+    width: 800px;
+    margin: 0 auto;
+    text-align: center;
+}
+
 .b-login-container {
     width: 800px;
     margin: 0 auto;
@@ -6,7 +12,32 @@
     .form {
         text-align: center;
         margin: 0 auto;
-        width: 300px;
+        width: 600px;
+
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+
+            li {
+                margin: 5px;
+
+                label {
+                    margin: 0;
+                    text-align: right;
+                    width: 100px;
+                    display: inline-block;
+                    color: $col-text-pri;
+                }
+
+                input {
+                    border-radius: 5px;
+                    border: 1px solid $col-border;
+                    padding: 5px;
+                    width: 200px;
+                }
+            }
+        }
     }
 
     .signup-link {
